k8s/dp-blogr-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogr-app
spec:
  selector:
    matchLabels:
      app: blogr-app
  replicas: 3
  minReadySeconds: 15
  restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: blogr-app
    spec:
      containers:
      - name: blogr-app
        image: denzal/blogr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
