k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blogr-service
  labels:
    run: blogr-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: NodePort
  selector:
    run: blogr-app
