k8s/svc-blogr-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: blogr-lb
  labels:
    app: blogr-lb
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    
  type: LoadBalancer
  selector:
    app: blogr-app
