k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blogr-ingress
  namespace: blogr
  # annotations:
  #   kubernetes.io/ingress.class: alb
  #   alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: blogr-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "blogr"
              servicePort: 80
